--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "scripts": {
         "start": "node ./server/server.js",
         "dev": "concurrently \"nodemon --watch ./server ./server/server.js\" \"react-scripts start\"",
-        "build": "react-scripsts build",
+        "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
